[package]
authors = ["29rou <g196010r@icu.ac.jp>"]
name = "c-som"
version = "0.1.0"

[dependencies]
image = "0.17.0"
itertools = "0.7.1"
lazy_static = "0.2.9"
nalgebra = "0.13.1"
num = "0.1.40"
rand = "0.3.17"
rayon = "0.8.2"
regex = "0.2.2"
walkdir = "1.0.7"

[dependencies.clippy]
optional = true
version = "0.0.165"

[features]
default = []
[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.doc]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false
