[package]
authors = ["29rou <g196010r@icu.ac.jp>"]
name = "c-som"
version = "0.1.0"

[build-dependencies]
blas-sys = "0.6.9"

[dependencies]
cifar_10_loader = "0.1.13"
lazy_static = "0.2.9"
nalgebra = "0.13.1"
num = "0.1.40"
rand = "0.3.17"

[dependencies.blas-sys]
default-features = false
features = ["openblas"]
version = "0.6.9"

[dependencies.clippy]
optional = true
version = "0.0.166"

[dependencies.ndarray]
features = ["blas"]
version = "0.10.12"

[features]
default = []
[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.doc]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false
