[package]
authors = ["29rou <g196010r@icu.ac.jp>"]
name = "c-som"
version = "0.1.0"

[dependencies]
num = "0.1.42"
typenum = "1.10.0"
itertools = "0.7.8"
generic-array = "0.11.0"
rand = "0.4.2"

[lib]
crate-type = ["rlib"]

[dependencies.num-traits]
version = "0.2.2"
default-features = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false
incremental = false
overflow-checks = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false
incremental = true
overflow-checks = true